css/site.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;700&display=swap');

html {
    font-family: 'Quicksand', sans-serif, 'Times New Roman';
    font-weight: 300;
    font-size: 36px;
}

body {
    max-width: 1440px;
    margin: auto;
    background-color: rgba(0, 0, 0, 0.034);
}

main {
    background-color: #fff;
}

h1 {
    font-weight: 700;
    color: #fff;
    font-size: 4rem;
    text-transform: uppercase;
    text-align: right;
}

h2 {
    font-weight: 700;
    color: #000;
    font-size: 2.5rem;
    text-transform: uppercase;
}

nav ul {
    margin: 0;
}

nav ul li {
    list-style: none;
    display: inline-block;
    color: #fff;
    padding-right: 1rem;
}

nav ul li a {
    color: #fff;
    text-decoration: none;
}

p {
    line-height: 1.5rem;
}

form {
    padding:0 15%;
    display: grid;
    grid-template-columns: auto;
}

form > div {
    display: flex;
    justify-content: center;
}

input, textarea {
    font-size: 0.75rem;
}

button {
    font-size: 0.67rem;
    padding: 0.25rem 4%;
    margin: 0.25rem;
    
}

header {
    background-color: #000;
    color: #fff;
    font-size: 0.67rem;
    text-align: right;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;    
}

footer {
    background-color: #000;
    color: #fff;
    font-size: 0.67rem;
    text-align: center;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.hero {
    position: relative;
}

.hero img {
    width: 100%;
}

.hero h1 {
    position: absolute;
    bottom: 3rem;
    left: 1rem;
}

#contact-me h2 {
    margin: 1rem 0;
    text-align: center;
}

#portfolio-section {
    position: relative;
}

#portfolio-section img {
    width: 100%;
}

#portfolio-section div {
    position: absolute;
    left: 1rem;
    top: 1rem;
}

#portfolio-section > div > h2 {
    color: #fff;
    margin: 0;
}

#portfolio-section > div > a {
    color: #d8b33c;
    font-size: 1.5rem;
    margin: 0;
}

#my-story {
    padding-left: 15%;
    padding-right: 15%;
}

#my-story h2 {
    margin: 1rem 0;
}

#portfolio-main {
    margin-top: 0.05rem;
    margin-bottom: 0.05rem;
}

.highlight {
    display: flex;
    align-items: center;
    text-align: center;
    background-color: #000;

}
.highlight h2 {
    color: #fff;
}

.highlight a{
    color: #d8b33c;
    font-size: 1.5rem;
}

.highlight.invert {
    background-color: #000;
    flex-direction: row-reverse;
}

.invert > div > h2{
    color: #fff;
}

.highlight > img {
    max-width: 50%;
}

#work-item-header {
    /* padding-left: 2rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem; */
    margin: 0;
    text-align: center;
}

#work-item-image {
    width: 100%;
    margin-bottom: 1rem;
}

.work-item-text {
    padding-left: 15%;
    padding-right: 15%;
}

#project-text {
    left: 1rem;
}

.work-item-text h3 {
    margin-bottom: 0.5rem;
}

.work-item-text p,
.work-item-text ul {
    margin-top: 0;
}

#challenges-text {
    padding-bottom: 1rem;
}

